# lmdeploy_official

benchmark/: profile_restful_api.py
lmdeploy/turbomind/deploy/target_model/: base.py
src/turbomind/kernels/attention/: attention_params.h  attention_universal.h  kv_cache_utils.cu  kv_cache_utils.h  kv_cache_utils_v2.cu  mainloop_sm70.h  mainloop_sm80.h
src/turbomind/layers/: DynamicDecodeLayer.cc
src/turbomind/models/llama/: CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaV2.cc  LlamaV2.h  LlamaWeight.h  llama_kernels.cu  llama_kernels.h  unified_attention_layer.cc
src/turbomind/models/medusa_plugin/: CMakeLists.txt  medusa_head.cc  medusa_head.h  medusa_utils.cc  medusa_utils.h
src/turbomind/models/medusa_plugin/tests/: medusa_utils_test.cc
